# tgbot

./: .gitattributes  .gitignore  LICENSE  README.md  TelegramBotAPI.html  sw.cpp  update.sh  update.sw
.github/workflows/: sw.yml
examples/report_detection_bot/: CMakeLists.txt  README.md  report_detection_bot.settings  sw.cpp
examples/report_detection_bot/src/: main.cpp  report_detection_bot.cpp
include/tgbot/: Api.h  Bot.h  CurlHttpClient.h  EventBroadcaster.h  EventHandler.h  HttpClient.h  LongPoll.h  TgLongPoll.h  TgTypeParser.h  Types.h  api.h  bot.h  curl_http_client.h  tgbot.h  types.h
include/tgbot/net/: CurlHttpClient.h  HttpClient.h  HttpReqArg.h  TgLongPoll.h  Url.h
include/tgbot/tools/: StringTools.h
src/: Api.cpp  ApiTemplates.h  Bot.cpp  CurlHttpClient.cpp  EventHandler.cpp  HttpRequestArgument.h  LongPoll.cpp  TgLongPoll.cpp  TgTypeParser.cpp  api.cpp  api_templates.h  bot.cpp  curl_http_client.cpp  curl_http_client_async.cpp  http_request_argument.h
src/curl_skeleton/include/: curl_http_client.h  tgbot_curl_skeleton.h
src/net/: CurlHttpClient.cpp  TgLongPoll.cpp
tools/: api_tool.cpp  api_tool.h  emitter.cpp  emitter.h  parser.cpp  parser.h  types.h
